{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 11,
  "lineage": "0150dfaa-3f84-a281-af12-45e37bac0fad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df99b3a8349462c6",
            "arn": "arn:aws:ec2:ap-northeast-1:135278422205:instance/i-0b1c6c06946c74e6e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1c6c06946c74e6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "2021-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8ee665e641c1d3a",
            "private_dns": "ip-172-31-36-106.ap-northeast-1.compute.internal",
            "private_ip": "172.31.36.106",
            "public_dns": "ec2-3-112-227-72.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.227.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07520af32a1f3ba1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "the-sg-for-ssh-1",
              "the-sg-for-web-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb08340b893833ec",
            "tags": {
              "Name": "t2-micro-20211001"
            },
            "tags_all": {
              "Name": "t2-micro-20211001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a513326e15cd7516",
              "sg-0fde700b5a5465d01"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-sg",
            "aws_security_group.web-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:135278422205:security-group/sg-0a513326e15cd7516",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a513326e15cd7516",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "the-sg-for-ssh-1",
            "name_prefix": "",
            "owner_id": "135278422205",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d1b5aec9d3d38ed"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:135278422205:security-group/sg-0fde700b5a5465d01",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fde700b5a5465d01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "the-sg-for-web-1",
            "name_prefix": "",
            "owner_id": "135278422205",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d1b5aec9d3d38ed"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}